--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,6 +4,10 @@
   .btn--#{$color}{
     @extend %btn;
     @include btn ($color);
-    margin: 20px 10px;
+    }
   }
+
+
+.btn--info{
+  margin-right: 0;
 }
