--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,6 +1,7 @@
 .nav{
-  @include mq(768px, space-between,0 50px 0 150px);
-
+  @include mq(768px, space-between,0 50px 0 150px){
+  max-width: 448px;
+ }
 }
 
 
@@ -12,6 +13,7 @@
   a{
     display: block;
     padding: 10px 0;
+    margin: 0 10px;
     @include c ($main-grey);
     &:hover{
       @include c($main-white);
