--- a/scss/utilities/_placeholders.scss
+++ b/scss/utilities/_placeholders.scss
@@ -21,7 +21,8 @@
   display: block;
   width: 100%;
   padding: 10px 0;
-  margin: 20px 0;
+  margin-top: 20px;
+  margin-right: 10px;
   border-radius: $br;
   border-style: none;
   color: $main-white;
